--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,13 @@
 body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 /*Typo*/
 .header-title{
     margin-top: 0;
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin-left: 0.5em;
     font-family: 'Fira Mono', monospace;
     color: #fff;
@@ -29,7 +29,7 @@ body{
 /*Header*/
 header{
     display: flex;
-    padding: 1em;
+    padding: 1em 0.5em;
     background-color: #000;
 }
 
