--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 }
 body{
     margin: 0;
+    padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
 }
@@ -31,6 +32,7 @@ header{
     display: flex;
     padding: 1em 0.5em;
     background-color: #000;
+    justify-content: space-between;
 }
 
 .header-container{
@@ -73,7 +75,7 @@ header{
 }
 .nav-open-btn{
     right: 4%;
-    top: 2%;
+    top: 2.5%;
     position: absolute;
     font-size: 2rem;
     background: none;
@@ -96,18 +98,18 @@ header{
 .list-li{
     list-style: none;
     transition: all 0.5s;
-    transform: scale(1,1);
+    transform: scale(1);
 }
 .list-li:hover,
 .list-li:focus{ 
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 .list-link:hover,
 .list-link:focus{
     color: #fff200;
 }
 
-@media(min-width:600px){
+@media(min-width:720px){
     header{
         padding: 1em 2em;
         justify-content: space-between;
@@ -145,3 +147,41 @@ header{
         font-size: 1.4rem;
     }
 }
+
+
+/*Section*/
+
+
+.section-one{
+    padding: 1em 2em;
+    justify-content: end;
+    align-items: start;
+    display: flex;
+    flex-direction: column;
+    height: 87vh;
+    color: #fff;
+    margin: 0;
+    background: url('/images/section-background.png');
+    background-size: cover;
+    background-position: center;
+}
+.section-date{
+    letter-spacing: 2px;
+    font-family: 400;
+    font-size: 1.2rem;
+    margin-bottom: 0;
+}
+.section-title{
+    margin-top: 0.2em;
+    font-size: 1.8rem;
+    text-shadow: 2px 2px 4px #000;
+    margin-bottom: 0;
+    letter-spacing: 2px;
+}
+.section-para{
+    text-shadow: 1px 1px 4px #000;
+    font-weight: 400;
+    font-size: 1.215rem;
+    letter-spacing: 2px;
+}
+
