--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,7 @@ header{
     transform: translateY(-100%);
 }
 .nav-close-btn{
+    cursor: pointer;
     position: fixed;
     top: 2%;
     left: 2%;
@@ -83,6 +84,7 @@ header{
     transition: all 0.5s;
     transform: scale(1);
     color: #fff;
+    cursor: pointer;
 }
 .nav-open-btn:focus,
 .nav-open-btn:hover{
@@ -99,6 +101,7 @@ header{
     list-style: none;
     transition: all 0.5s;
     transform: scale(1);
+   
 }
 .list-li:hover,
 .list-li:focus{ 
@@ -118,7 +121,7 @@ header{
         width: 50%;
     }
     .header-title{
-        font-size: 2rem;
+        font-size: 1.5rem;
         margin-bottom: 0;
     }
     .nav-close-btn,
@@ -140,11 +143,11 @@ header{
         flex-direction: row;
         gap: 3em;
         justify-content: flex-end;
-        margin-top: 1em;
+        margin-top: 1.5em;
         margin-bottom: 0;
     }
     .list-link{
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 }
 
@@ -153,7 +156,7 @@ header{
 
 
 .section-one{
-    padding: 1em 2em;
+    padding: 1em 1.5em;
     justify-content: end;
     align-items: start;
     display: flex;
@@ -163,6 +166,7 @@ header{
     margin: 0;
     background: url('/images/section-background.png');
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
 }
 .section-date{
@@ -184,4 +188,72 @@ header{
     font-size: 1.215rem;
     letter-spacing: 2px;
 }
+.section-two-title{
+    transform: scale(1);
+    transition: all 0.5s;
+}
+.section-two-title:hover{
+    transform: scale(1.1);
+}
 
+@media(min-width:720px){
+    .section-para{
+        width: 60%;
+    }
+}
+
+
+
+/*Post Section*/
+.section-two{
+    padding: 1.5em;
+}
+.post-img{
+    margin-top: 2em;
+    width: 100%;
+}
+
+.section-two-date{
+    margin-bottom: 0;
+}
+.section-two-title{
+    letter-spacing: 2px;
+    margin-top: 0.325em;
+    margin-bottom: 0;
+    font-size: 1.5rem;
+}
+.section-two-para{
+    font-size: 1rem;
+    margin-top: 0.521em;
+    letter-spacing: 1px;
+}
+
+@media(min-width:720px){
+    .section-two{
+        display: flex;
+        gap: 1em;
+        justify-content: space-between;
+    }
+}
+
+/*Footer*/
+.footer{
+    line-height: 0.5;
+    text-align: center;
+    padding: 1em;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #000;
+}
+.icon{
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin: 0.51em;
+    transition: all 0.5s;
+    transform: scale(1);
+}
+.icon:focus,
+.icon:hover,
+.icon:active{
+    transform: scale(1.5);
+}
