--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,8 @@ body{
     margin-left: 0.5em;
     font-family: 'Fira Mono', monospace;
     color: #fff;
+    transform: scale(1);
+    transition: all 0.5s;
 }
 .list-link{
     cursor: pointer;
@@ -111,6 +113,13 @@ header{
 .list-link:focus{
     color: #fff200;
 }
+.header-title-nav-link{
+    text-decoration: none;
+    color: #fff;
+}
+.header-title:hover{
+    transform: scale(1.05,1.3);
+}
 
 @media(min-width:720px){
     header{
@@ -181,6 +190,12 @@ header{
     text-shadow: 2px 2px 4px #000;
     margin-bottom: 0;
     letter-spacing: 2px;
+    transition: all 0.5s;
+    transform: scale(1);
+}
+.section-title:hover,
+.section-title:focus{
+    transform: scale(1.051);
 }
 .section-para{
     text-shadow: 1px 1px 4px #000;
@@ -207,6 +222,12 @@ header{
 /*Post Section*/
 .section-two{
     padding: 1.5em;
+}
+.post-section{
+    margin-bottom: 0;
+}
+.post-section-two{
+    margin-top: 0;
 }
 .post-img{
     margin-top: 2em;
@@ -256,4 +277,41 @@ header{
 .icon:hover,
 .icon:active{
     transform: scale(1.5);
+}
+
+
+/*Journal Page*/
+.top-content{
+    text-align: center;
+
+}
+.journal-section-title{
+    font-size: 2rem;
+    margin: 0.50em 0;
+}
+
+.journal-img{
+    width: 95%;
+}
+.journal-section-para{
+    display: block;
+    margin: 1.02em auto;
+    width: 95%;
+    letter-spacing: 2px;
+    font-size: 1.2rem;
+}
+.journal-question{
+    line-height: 1.6;
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+}
+.question{
+    width: 95%;
+    margin: 0 auto;
+    text-align: start;
+}
+@media(min-width:720px){
+    .journal-section-para{
+        width: 80%;
+    }
 }
