--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,7 @@ header{
 }
 .header-title-nav-link{
     text-decoration: none;
+    border-bottom: 2px solid #fff;
     color: #fff;
 }
 .header-title:hover{
@@ -314,5 +315,38 @@ header{
 @media(min-width:720px){
     .journal-section-para{
         width: 80%;
+    }
+}
+
+
+
+/*ABout Page*/
+.about-container{
+    padding: 1em 1.5em;
+}
+.highlight{
+    font-weight: 700;
+    color: #ff0000;
+}
+.about-img{
+    width: 50%;
+    border-radius: 50%;
+    border: 4px solid #000;
+}
+.about-para{
+    font-size: 1.2rem;
+    line-height: 1.6;
+    letter-spacing: 1px;
+}
+@media (min-width:720px) {
+    .about-container{
+        display: flex;
+        gap: 2em;
+    }
+    .about-details{
+        margin-top: 2em;
+    }
+    .about-img{
+        width: 20%;
     }
 }
