--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,11 @@ header{
     border-bottom: 2px solid #fff;
     color: #fff;
 }
+.header-title-nav-link:hover,
+.header-title-nav-link:focus{
+    color: #707070;
+    border-color: #707070;
+}
 .header-title:hover{
     transform: scale(1.05,1.3);
 }
@@ -191,12 +196,7 @@ header{
     text-shadow: 2px 2px 4px #000;
     margin-bottom: 0;
     letter-spacing: 2px;
-    transition: all 0.5s;
-    transform: scale(1);
-}
-.section-title:hover,
-.section-title:focus{
-    transform: scale(1.051);
+  
 }
 .section-para{
     text-shadow: 1px 1px 4px #000;
